<resources>
    <string name="app_name">LoginPlatform</string>
    <string name="form">Please fill in the form</string>
    <string name="firstname">Enter first name</string>
    <string name="secondname">Enter second name</string>
    <string name="email">Enter email address</string>
    <string name="contact">Enter your contact</string>
    <string name="loc">Enter your location</string>
    <string name="user">Enter username</string>
    <string name="pass1">Enter passward</string>
    <string name="pass2">Confirm passward</string>
    <string name="dob">Enter date of birth</string>
    <string name="log">Dont have an account?? Register</string>
    <string name="btn">LOGIN</string>
    <string name="home">Welcome</string>
    <string name="next">Next</string>
    <string name="admin1">Admin</string>
    <string name="student1">Student</string>
<!--    <string name="app_name">HostelManagementApp</string>-->
    <string name="admin_login_text">Admin Login</string>
    <string name="admin_username_hint">Admin Username</string>
    <string name="admin_password_hint">Admin Password</string>
    <string name="login_admin_btn">Login</string>
    <string name="profile_text">Select Your Profile :</string>
    <string name="admin_option">Admin</string>
    <string name="student_option">Student</string>
    <string name="student_login_text">Student Login</string>
    <string name="student_reg_number">Enter  your registration number</string>
    <string name="student_password">Enter your password</string>
    <string name="student_login_btn">Login</string>
    <string name="unregistered_student">Don\'t have an account? |  Register here</string>
    <string name="studentname_text">Enter student name</string>
    <string name="student_reg_no">Enter student registration number</string>
    <string name="student_age">Enter your  student age</string>
    <string name="student_email">Enter student email</string>
    <string name="password_one">Enter password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="register_txt_btn">Register</string>
    <string name="registered">Already have an account? | Login  here</string>
    <string name="form2">Student Registration Form</string>
    <string name="logout">Logout</string>
    <string name="admin_welcome">Admin</string>
    <string name="student_welcome">Student</string>
    <string name="view_hostel_details">View Hostel Details</string>
    <string name="view_hostels">VIEW HOSTELS</string>
    <string name="back">Back</string>
    <string name="msg">Send message</string>
    <string name="pay">Pay</string>
    <string name="book_now">Book now</string>
    <string name="location">Located in makere kikoni at a price of $20 with good security and beds are provides</string>
    <string name="bascon_hostel">Bascon Hostel</string>
    <string name="bascon_hotel_details">Bascon Hotel Details</string>
    <string name="available_hostels">Available Hostels</string>
    <string name="welcome">Welcome</string>
    <string name="select_your_user_profile">Select Your User Profile</string>
    <string name="student_profile">Student Profile</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="students">STUDENTS</string>


</resources>