<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/holo_green_dark"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="20dp"
    android:layout_centerInParent="true"
    tools:context=".SignUpActivity"
    android:layout_height="match_parent">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/form2"/>
    <TextView
        android:id="@+id/tvRegisterStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/form"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:hint="@string/studentname_text"/>

    <EditText
        android:id="@+id/etUserNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:hint="@string/student_reg_no"
        />




    <EditText
        android:id="@+id/etPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:hint="@string/password_one"
        />
    <EditText
        android:id="@+id/etConfirmPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:hint="@string/confirm_password"
        />





    <Button
        android:id="@+id/bRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_txt_btn"
        android:layout_marginTop="30dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/txt2"
        android:textColor="@android:color/white"
        android:text="Already have an account? | Login"
        />

</LinearLayout>