<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_centerInParent="true"
android:layout_height="match_parent"
    tools:context=".HostelDetails"
    >





    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="2dp"
            android:padding="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="bottom|left"
                android:text="@string/bascon_hotel_details"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                 />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/htl1"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="bottom|left"
                android:text="@string/bascon_hostel"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="top|left"
                android:text="@string/location"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:text="@string/book_now"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_width="100dp"
                    android:text="@string/pay"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_width="wrap_content"
                    android:text="@string/msg"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:text="@string/back"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </LinearLayout>




    </ScrollView>



</RelativeLayout>