<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="50dp"
    android:layout_gravity="center"
    android:padding="15dp"
    tools:context=".AdminLoginActivity"
>

    <TextView
        android:id="@+id/tvAdminLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/admin_login_text"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <EditText
        android:id="@+id/etAdminUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/admin_username_hint"
        />
    <EditText
        android:id="@+id/etAdminPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/admin_password_hint"
        />
    <Button
        android:id="@+id/bAdminLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        android:text="@string/login_admin_btn"/>
</LinearLayout>
