<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/main"
    tools:context=".StudentLoginActivity"
  >

    <TextView
        android:id="@+id/tvUserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/student_login_text"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <EditText
        android:id="@+id/etReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:hint="@string/student_reg_number"
        />
    <EditText
        android:id="@+id/etPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"
        android:hint="@string/student_password"
        />
    <Button
        android:id="@+id/bStudentLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        android:text="@string/student_login_btn"

        />
    <TextView
        android:id="@+id/regStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/unregistered_student"
       />


</LinearLayout>
