<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".StudentDashboard"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvStudentDashboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="Student Profile"

            />
<!--        <TextView-->
<!--            android:id="@+id/tvWelcomeMsg"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="3"-->
<!--            android:textAppearance="?android:textAppearanceLarge"-->
<!--            android:text="@string/welcome"-->

            />
        <TextView
            android:id="@+id/tvUserLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textSize="15sp"
            android:gravity="center_horizontal"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        />
        <TextView
          android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name : Nabatanzi Gorret"
            android:textSize="18sp"
            android:gravity="center_horizontal"

            />

        <TextView
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Registration number: QOOOU1000"
            android:textSize="18sp"
            android:gravity="center_horizontal"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_hostels"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"

            />

        <Button
            android:id="@+id/btnHostel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_hostel_details"
/>
    </LinearLayout>

    <ListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    </ListView>





</LinearLayout>
